@@ -34,6 +34,14 @@ accept_threads=1
 # since V2.00
 work_threads=4
 
+# min buff size
+# default value 8KB
+min_buff_size = 8KB
+
+# max buff size
+# default value 128KB
+max_buff_size = 128KB
+
 # the method of selecting group to upload files
 # 0: round robin
 # 1: specify group
