@@ -41,6 +41,8 @@ extern FDFSGroups g_groups;
 extern int g_storage_stat_chg_count;
 extern int g_storage_sync_time_chg_count; //sync timestamp
 extern int g_max_connections;
+extern int g_min_buff_size;
+extern int g_max_buff_size;
 extern int g_accept_threads;
 extern int g_work_threads;
 extern FDFSStorageReservedSpace g_storage_reserved_space;
